--- a/Draw/Dice/View/DiceUserInfoView/DiceUserInfoView.xib
+++ b/Draw/Dice/View/DiceUserInfoView/DiceUserInfoView.xib
@@ -42,6 +42,7 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{0, -10}, {320, 480}}</string>
 						<reference key="NSSuperview" ref="924805324"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="215313039"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -82,18 +83,24 @@
 							<object class="IBUIImageView" id="695897427">
 								<reference key="NSNextResponder" ref="215313039"/>
 								<int key="NSvFlags">274</int>
-								<string key="NSFrameSize">{260, 288}</string>
+								<string key="NSFrameSize">{260, 188}</string>
 								<reference key="NSSuperview" ref="215313039"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="36105668"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<object class="NSCustomResource" key="IBUIImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">dice_help_bg@2x.png</string>
+								</object>
 							</object>
 							<object class="IBUILabel" id="821928283">
 								<reference key="NSNextResponder" ref="215313039"/>
-								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{68, 46}, {101, 21}}</string>
+								<int key="NSvFlags">303</int>
+								<string key="NSFrame">{{68, 28}, {101, 21}}</string>
 								<reference key="NSSuperview" ref="215313039"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="448182002"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -122,9 +129,10 @@
 							</object>
 							<object class="IBUILabel" id="533340619">
 								<reference key="NSNextResponder" ref="215313039"/>
-								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{68, 75}, {38, 21}}</string>
+								<int key="NSvFlags">303</int>
+								<string key="NSFrame">{{68, 47}, {38, 21}}</string>
 								<reference key="NSSuperview" ref="215313039"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="273470397"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -153,9 +161,10 @@
 							</object>
 							<object class="IBUILabel" id="273470397">
 								<reference key="NSNextResponder" ref="215313039"/>
-								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{108, 74}, {78, 21}}</string>
+								<int key="NSvFlags">303</int>
+								<string key="NSFrame">{{108, 46}, {78, 21}}</string>
 								<reference key="NSSuperview" ref="215313039"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="209270839"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -177,18 +186,21 @@
 							</object>
 							<object class="IBUIImageView" id="209270839">
 								<reference key="NSNextResponder" ref="215313039"/>
-								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{187, 74}, {63, 21}}</string>
+								<int key="NSvFlags">303</int>
+								<string key="NSFrame">{{187, 46}, {63, 21}}</string>
 								<reference key="NSSuperview" ref="215313039"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
 							<object class="IBUIButton" id="472840128">
 								<reference key="NSNextResponder" ref="215313039"/>
-								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{192.5, 43}, {50, 26}}</string>
+								<int key="NSvFlags">303</int>
+								<string key="NSFrame">{{192, 26}, {50, 26}}</string>
 								<reference key="NSSuperview" ref="215313039"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="533340619"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -214,9 +226,10 @@
 							</object>
 							<object class="IBUILabel" id="501469967">
 								<reference key="NSNextResponder" ref="215313039"/>
-								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{192, 43}, {50, 26}}</string>
+								<int key="NSvFlags">303</int>
+								<string key="NSFrame">{{192, 26}, {50, 26}}</string>
 								<reference key="NSSuperview" ref="215313039"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="472840128"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -234,9 +247,10 @@
 							</object>
 							<object class="IBUILabel" id="448182002">
 								<reference key="NSNextResponder" ref="215313039"/>
-								<int key="NSvFlags">292</int>
+								<int key="NSvFlags">294</int>
 								<string key="NSFrame">{{164, 48}, {32, 21}}</string>
 								<reference key="NSSuperview" ref="215313039"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="501469967"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -266,9 +280,10 @@
 							</object>
 							<object class="IBUIView" id="36105668">
 								<reference key="NSNextResponder" ref="215313039"/>
-								<int key="NSvFlags">292</int>
+								<int key="NSvFlags">294</int>
 								<string key="NSFrame">{{18, 46}, {42, 42}}</string>
 								<reference key="NSSuperview" ref="215313039"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="821928283"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
@@ -281,8 +296,9 @@
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
 						</array>
-						<string key="NSFrame">{{30, 91}, {260, 288}}</string>
+						<string key="NSFrame">{{30, 141}, {260, 188}}</string>
 						<reference key="NSSuperview" ref="924805324"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="695897427"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="779680298">
@@ -294,6 +310,7 @@
 				</array>
 				<string key="NSFrameSize">{320, 460}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="876898479"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="779680298"/>
@@ -302,14 +319,6 @@
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
 			<array class="NSMutableArray" key="connectionRecords">
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">backgroundImageView</string>
-						<reference key="source" ref="924805324"/>
-						<reference key="destination" ref="695897427"/>
-					</object>
-					<int key="connectionID">42</int>
-				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">mask</string>
@@ -389,6 +398,14 @@
 						<reference key="destination" ref="36105668"/>
 					</object>
 					<int key="connectionID">55</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">backgroundImageView</string>
+						<reference key="source" ref="924805324"/>
+						<reference key="destination" ref="695897427"/>
+					</object>
+					<int key="connectionID">42</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -494,13 +511,13 @@
 						<reference key="parent" ref="215313039"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">21</int>
-						<reference key="object" ref="695897427"/>
+						<int key="objectID">54</int>
+						<reference key="object" ref="36105668"/>
 						<reference key="parent" ref="215313039"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">54</int>
-						<reference key="object" ref="36105668"/>
+						<int key="objectID">21</int>
+						<reference key="object" ref="695897427"/>
 						<reference key="parent" ref="215313039"/>
 					</object>
 				</array>
@@ -530,7 +547,85 @@
 			<nil key="sourceID"/>
 			<int key="maxID">55</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">DiceAvatarView</string>
+					<string key="superclassName">UIView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/DiceAvatarView.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">DiceUserInfoView</string>
+					<string key="superclassName">UIView</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="avatar">DiceAvatarView</string>
+						<string key="backgroundImageView">UIImageView</string>
+						<string key="contentView">UIView</string>
+						<string key="followUserButton">UIButton</string>
+						<string key="genderLabel">UILabel</string>
+						<string key="levelLabel">UILabel</string>
+						<string key="locationLabel">UILabel</string>
+						<string key="mask">UIButton</string>
+						<string key="snsTagImageView">UIImageView</string>
+						<string key="statusLabel">UILabel</string>
+						<string key="userName">UILabel</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="avatar">
+							<string key="name">avatar</string>
+							<string key="candidateClassName">DiceAvatarView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="backgroundImageView">
+							<string key="name">backgroundImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="contentView">
+							<string key="name">contentView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="followUserButton">
+							<string key="name">followUserButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="genderLabel">
+							<string key="name">genderLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="levelLabel">
+							<string key="name">levelLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="locationLabel">
+							<string key="name">locationLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="mask">
+							<string key="name">mask</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="snsTagImageView">
+							<string key="name">snsTagImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="statusLabel">
+							<string key="name">statusLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="userName">
+							<string key="name">userName</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/DiceUserInfoView.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
@@ -539,6 +634,10 @@
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
+		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
+			<string key="NS.key.0">dice_help_bg@2x.png</string>
+			<string key="NS.object.0">{640, 960}</string>
+		</object>
 		<string key="IBCocoaTouchPluginVersion">1179</string>
 	</data>
 </archive>
