--- a/Draw/Dice/Controller/Room/DiceRoomListController~ipad.xib
+++ b/Draw/Dice/Controller/Room/DiceRoomListController~ipad.xib
@@ -67,11 +67,6 @@
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<bool key="IBUIAlwaysBounceVertical">YES</bool>
-						<int key="IBUISeparatorStyle">1</int>
-						<object class="NSColor" key="IBUISeparatorColor">
-							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MSAwLjIgMAA</bytes>
-						</object>
 						<int key="IBUISectionIndexMinimumDisplayRowCount">0</int>
 						<bool key="IBUIShowsSelectionImmediatelyOnTouchBegin">YES</bool>
 						<float key="IBUIRowHeight">44</float>
@@ -120,6 +115,7 @@
 						<string key="NSFrame">{{420, 915}, {282, 74}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -371,6 +367,14 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">dataTableView</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="634627151"/>
+					</object>
+					<int key="connectionID">29</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">dataSource</string>
 						<reference key="source" ref="634627151"/>
 						<reference key="destination" ref="372490531"/>
@@ -558,7 +562,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">28</int>
+			<int key="maxID">29</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -567,8 +571,8 @@
 					<string key="superclassName">PPTableViewController</string>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="allRoomButton">FontButton</string>
-						<string key="createRoomButton">UIButton</string>
-						<string key="fastEntryButton">UIButton</string>
+						<string key="createRoomButton">FontButton</string>
+						<string key="fastEntryButton">FontButton</string>
 						<string key="friendRoomButton">FontButton</string>
 						<string key="nearByRoomButton">FontButton</string>
 						<string key="titleFontButton">FontButton</string>
@@ -580,11 +584,11 @@
 						</object>
 						<object class="IBToOneOutletInfo" key="createRoomButton">
 							<string key="name">createRoomButton</string>
-							<string key="candidateClassName">UIButton</string>
+							<string key="candidateClassName">FontButton</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="fastEntryButton">
 							<string key="name">fastEntryButton</string>
-							<string key="candidateClassName">UIButton</string>
+							<string key="candidateClassName">FontButton</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="friendRoomButton">
 							<string key="name">friendRoomButton</string>
@@ -606,7 +610,7 @@
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">FontButton</string>
-					<string key="superclassName">UIButton</string>
+					<string key="superclassName">UIGlossyButton</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/FontButton.h</string>
@@ -637,6 +641,14 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/PPViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">UIGlossyButton</string>
+					<string key="superclassName">UIButton</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/UIGlossyButton.h</string>
 					</object>
 				</object>
 			</array>
