--- a/Draw/Dice/View/DiceHelpView/DiceHelpView.xib
+++ b/Draw/Dice/View/DiceHelpView/DiceHelpView.xib
@@ -153,12 +153,15 @@
 						<string key="NSFrame">{{20, 72}, {280, 374}}</string>
 						<reference key="NSSuperview" ref="811135455"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="844004429">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MCAwAA</bytes>
 						</object>
+						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<bool key="IBUIScalesPageToFit">YES</bool>
 						<int key="IBUIDataDetectorTypes">1</int>
 						<bool key="IBUIDetectsPhoneNumbers">YES</bool>
 					</object>
@@ -252,8 +255,8 @@
 							<reference ref="952438166"/>
 							<reference ref="509728187"/>
 							<reference ref="911248886"/>
-							<reference ref="118099370"/>
 							<reference ref="102925007"/>
+							<reference ref="118099370"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
